# microsat

./: .gitignore  Cargo.toml  README.md
examples/: solve_all_files.rs  solve_cnf_file.rs
examples/cnf/: example-1.cnf
src/: cnf.rs  dimacs_parser.rs  dpll.rs  expression.rs  lib.rs  solver.rs  stack.rs
